# EMELinkBudget

./: .gitignore  CMakeLists.txt  EMELinkBudget.slnx  README.md  test_wmm_load.cpp  vcpkg.json
.github/workflows/: cmake.yml  msbuild.yml
EMELinkBudget/: EMELinkBudget.vcxproj  EMELinkBudget.vcxproj.filters
EMELinkBudget/src/: AstronomyAPIClient.cpp  AstronomyAPIClient.h  EMELinkBudget.cpp  EMELinkBudget.h  FaradayRotation.cpp  GeometryCalculator.cpp  GeometryCalculator.h  HaslamSkyMap.cpp  HaslamSkyMap.h  LinkBudgetTypes.h  NOAAGlotecReader.cpp  NoiseCalculator.cpp  NoiseCalculator.h  Parameters.h  PathLossCalculator.cpp  PathLossCalculator.h  PolarizationModule.cpp  PolarizationModule.h  SNRCalculator.cpp  SNRCalculator.h  SimpleHttpClient.cpp  SimpleHttpClient.h  SpectralSpreadingCalculator.cpp  SpectralSpreadingCalculator.h  WMMModel.cpp  main.cpp  main_interactive.cpp  main_linkbudget.cpp  main_linkbudget_interactive.cpp  test_calendar.cpp  test_glotec.cpp  test_ionex.cpp  test_ionosphere_physics.cpp  test_jpl_horizons.cpp  test_linkbudget_quick.cpp  test_user_case.cpp  test_wmm.cpp
